--- a/src/app/features/components/card-device/card-device.html
+++ b/src/app/features/components/card-device/card-device.html
@@ -6,18 +6,13 @@
 >
   <mat-card-header>
     <mat-card-title-group>
-      <mat-card-title>{{ device()?.name }}</mat-card-title>
-      <mat-card-subtitle>{{ device()?.type }}</mat-card-subtitle>
-      <mat-radio-button
-        [checked]="selected()"
-        (click)="$event.preventDefault()"
-      ></mat-radio-button>
+      <mat-card-title>{{ device().name }}</mat-card-title>
+      <mat-card-subtitle>{{ device().type }}</mat-card-subtitle>
+      <mat-radio-button [checked]="selected()" (click)="$event.preventDefault()"></mat-radio-button>
     </mat-card-title-group>
   </mat-card-header>
   <mat-card-content>
-    <p>Service Cost: {{ device()?.price }} {{ device()?.currency }}</p>
-    <small class="device-note">
-      All prices include VAT. Our products are eco-friendly.
-    </small>
+    <p>Service Cost: {{ device().price }} {{ device().currency }}</p>
+    <small class="device-note"> All prices include VAT. Our products are eco-friendly. </small>
   </mat-card-content>
 </mat-card>
