--- a/src/app/features/pages/home/home.html
+++ b/src/app/features/pages/home/home.html
@@ -38,7 +38,7 @@
       type="button"
       aria-label="Check your laundry cycles"
       title="Check out your active laundry cycles"
-      [routerLink]="['/cycles']"
+      [routerLink]="['/cycles-list']"
     >
       Check Active Cycles
     </button>
