--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,9 +1,15 @@
 :host {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    
-    app-header { flex: 0 0 auto; }  
-    app-main { flex: 1; }           
-    app-footer { flex: 0 0 auto; }
-}   
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  app-header {
+    flex: 0 0 auto;
+  }
+  app-main {
+    flex: 1;
+  }
+  app-footer {
+    flex: 0 0 auto;
+  }
+}
