--- a/src/app/layout/main/main.scss
+++ b/src/app/layout/main/main.scss
@@ -1,23 +1,8 @@
-@use '../../../assets/styles/_tokens' as *;
-
 main {
   flex: 1;
   display: flex;
   flex-direction: column;
   overflow: auto;
-  background: var(--m-body-bg);
+  background: #ffffff;
   height: calc(100vh - 10rem);
-  
-  .skip-link-target {
-    position: absolute;
-    left: -10000px;
-    width: 1px;
-    height: 1px;
-    
-    &:focus {
-      position: static;
-      width: auto;
-      height: auto;
-    }
-  }
 }
